<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.github.samitc.imc</groupId>
    <artifactId>imc-pom</artifactId>
    <version>1.0.0-SNAPSHOT</version>
    <packaging>pom</packaging>
    <properties>
        <maven.plugin.build.version>3.7.0</maven.plugin.build.version>
        <maven.plugin.jar.version>3.0.2</maven.plugin.jar.version>
        <maven.source.lombok.version>1.16.18</maven.source.lombok.version>
        <maven.testing.junit.version>4.12</maven.testing.junit.version>
        <maven.imc.version>1.0.0-SNAPSHOT</maven.imc.version>
        <maven.jotils.version>0.1.2</maven.jotils.version>
        <java.version>1.8</java.version>
    </properties>
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${maven.plugin.build.version}</version>
                <configuration>
                    <compilerVersion>${java.version}</compilerVersion>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                </configuration>
            </plugin>
        </plugins>
    </build>
    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.projectlombok</groupId>
                <artifactId>lombok</artifactId>
                <version>${maven.source.lombok.version}</version>
                <scope>provided</scope>
            </dependency>
            <dependency>
                <groupId>com.github.samitc.utils</groupId>
                <artifactId>io-utils</artifactId>
                <version>${maven.jotils.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>
    <dependencies>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>${maven.testing.junit.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
        </dependency>
    </dependencies>
    <modules>
        <module>imc-core</module>
        <module>imc-server</module>
        <module>imc-client</module>
    </modules>
</project>